Fixed the turret animation by using blueprints instead, much smoother now.

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -122,7 +122,6 @@ bShowDebugVisualization=False
 bVisualizePreAndPostRoll=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -933,6 +932,7 @@ AutomationTestSettings.ExternalTools=True
 AutomationTestSettings.Screenshots=True
 CrashReporterSettings.CrashReporter=True
 LogVisualizerSettings.VisualLogger=True
+2DSideScrollerExampleMap_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -993,7 +993,7 @@ StaticMeshActor.StaticMesh=True
 LevelEditorViewportSettings.GridSnapping=True
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=478.000 Y=55.000
