Integrated Main Menu into project

--- a/Development/MainMenuProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/MainMenuProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -600,7 +600,9 @@ ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/LevelSelectWidget.LevelSelectWidget
+OpenAssetsAtExit=/Game/Blueprints/HelpWidget.HelpWidget
 
 [UMGEditor.Designer]
 PreviewWidth=1080
