--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Levels/PrototypeLevel.PrototypeLevel
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 GlobalDefaultServerGameMode=None
 
@@ -195,4 +195,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
