--- a/Development/Unreal Project/Config/DefaultGame.ini
+++ b/Development/Unreal Project/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D9944A2E47F83007520B4496AD6EA012
-ProjectName=2D Side Scroller Game Blueprint Template
+ProjectName=Group11Project
 
 [StartupActions]
 bAddPacks=True
