Added cannon sprite and material

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,8 +88,8 @@ DecimalGridSizes=64.000000
 CurrentPosGridSize=9
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/PrototypeLevel
+MRUItem0=/Game/Levels/PrototypeLevel
+MRUItem1=/Game/Levels/MainMenu
 MRUItem2=/Game/Levels/2DSideScrollerExampleMap
 MRUItem3=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
 MRUItem4=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -156,18 +156,16 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/PrototypeLevel
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget
-OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HUD.HUD
-OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
+OpenAssetsAtExit=/Game/Materials/Player2Cannon.Player2Cannon
+OpenAssetsAtExit=/Game/Materials/TileMaterial.TileMaterial
 OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
-OpenAssetsAtExit=/Game/Blueprints/Tiles/BreakableTile.BreakableTile
+OpenAssetsAtExit=/Game/Materials/CannonMaterial.CannonMaterial
+OpenAssetsAtExit=/Game/Materials/Player1Cannon.Player1Cannon
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1361,14 +1359,22 @@ Button.Events=True
 /Game/Sprites/TileSpriteTop.TileSpriteTop=0
 /Game/Sprites/TileSpriteWest.TileSpriteWest=0
 /Game/Blueprints/Tiles/SlowBlock.SlowBlock=1
+/Game/Blueprints/Widgets/HelpWidget.HelpWidget=0
+/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget=0
+/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget=0
+/Game/Blueprints/Widgets/HUD.HUD=0
+/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget=0
+/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget=0
+/Game/Materials/BlockerTileMaterial.BlockerTileMaterial=0
+/Game/Textures/CannonTexture.CannonTexture=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1411,7 +1417,7 @@ ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyClass
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
-PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
+PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
@@ -2132,6 +2138,7 @@ K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.De
 FloatProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
