Added scrolling Main Menu Background

--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Prototype_Group_11
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/PrototypeLevel.PrototypeLevel
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
