Added 'Targets', added one block interaction for increasing the number of projectile bounces.

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,14 +154,17 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Levels/PrototypeLevel
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
 OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
+OpenAssetsAtExit=/Game/Blueprints/Target.Target
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1436,6 +1439,18 @@ TileWallConnectedCorner2_C.Replication=True
 TileWallConnectedCorner2_C.Input=True
 TileWallConnectedCorner2_C.Actor=True
 TileWallConnectedCorner2_C.TransformCommon=True
+K2Node_VariableSet.Events=True
+PrototypeLevel_C.Default=True
+Target_C.Tick=True
+Target_C.Rendering=True
+Target_C.Replication=True
+Target_C.Input=True
+Target_C.Actor=True
+Target_C.TransformCommon=True
+K2Node_BreakStruct.PinOptions=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+Target_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1558,14 +1573,15 @@ TileWallConnectedCorner2_C.TransformCommon=True
 /Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2=0
 /Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner=1
 /Game/Materials/Player1Cannon.Player1Cannon=1
+/Game/Materials/BounceTileMaterial.BounceTileMaterial=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent=
-Object=
+ActorComponent="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Collision.BodyInstance\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1626,8 +1642,11 @@ OptionsWidget_C="\"Object.Render Transform.RenderTransform\" "
 LevelSelectWidget_C="\"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Render Transform.RenderTransform\" "
 TileBlueprint_C=
+Bullet_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
@@ -1643,11 +1662,9 @@ RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Sprites/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Sprites/TriangleTileSW.TriangleTileSW;
 RecentlyPlaced=/Game/Sprites/TriangleTileNE.TriangleTileNE;
-RecentlyPlaced=/Game/Sprites/TriangleTileNEE.TriangleTileNEE;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -1683,7 +1700,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
+UNR=../../../../../../Users/Joseph/Desktop/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2272,7 +2289,7 @@ bShowMobileStats=False
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=3
+PrimType=1
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
@@ -2334,12 +2351,13 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindin
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+K2Node_VariableGet=
 FloatProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+IntProperty=
 K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -2350,5 +2368,6 @@ bWantsMobileStats=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 
