Added basic timer functionality
Timer needs some adjustments but it now visibly regresses over time.

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -154,7 +154,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/PrototypeLevel
@@ -1485,6 +1485,16 @@ MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
 MaterialExpressionRotator.MaterialExpressionRotator=True
 MaterialExpressionRotator.MaterialExpression=True
+HUDWidget_C.Appearance=True
+HUDWidget_C.Interaction=True
+HUDWidget_C.Input=True
+HUDWidget_C.Designer=True
+HUDWidget_C.Layout=True
+HUDWidget_C.Behavior=True
+HUDWidget_C.Clipping=True
+HUDWidget_C.Performance=True
+HUDWidget_C.Render Transform=True
+HUDWidget_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1622,6 +1632,7 @@ MaterialExpressionRotator.MaterialExpression=True
 /Game/Textures/TimerTexture.TimerTexture=1
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
 /Game/Materials/TimerMaterial_Inst.TimerMaterial_Inst=1
+/Game/Blueprints/Widgets/HUDWidget.HUDWidget=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1629,7 +1640,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1642,8 +1653,8 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
@@ -1676,7 +1687,7 @@ PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Cannon_C=
+Cannon_C="\"Object.TimePercent\" \"Object.TimePercent\" "
 LevelButtonWidget_C="\"Object.Levels\" \"Object.Levels\" "
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
@@ -1695,6 +1706,7 @@ ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.HUDClass\" \"Object.HUDClass\" "
 Info=
+HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
@@ -1731,7 +1743,7 @@ BoxComponent.Collision=False
 PaperSprite.Collision=True
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=478.000 Y=55.000
@@ -1752,7 +1764,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=Z:/University/1st Year (Level 4)/Group Project/Semester 2/level and timer project edit/Unreal Project/Content/Levels
+UNR=../../../../../../Users/Games/Desktop/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2341,7 +2353,7 @@ bShowMobileStats=False
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=3
+PrimType=1
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
@@ -2406,7 +2418,7 @@ Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValue
 K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=
+IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=
