--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 
 [EditorStartup]
 LastLevel=/Game/Levels/Level2
@@ -1751,7 +1751,7 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.HUDClass\" \"Object.HUDClass\" "
-Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+Info=
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -2376,6 +2376,8 @@ StaticMeshEditor.TimeStamp=2017.09.26-10.10.47
 StaticMeshEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.10.01-15.07.42
 TextureEditor.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2017.09.26-13.41.11
+UATHelper.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
