Implemented particle system

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,8 +89,8 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level2
-MRUItem1=/Game/Levels/Level1
+MRUItem0=/Game/Levels/Level1
+MRUItem1=/Game/Levels/Level2
 MRUItem2=/Game/Levels/Level_2
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/PrototypeLevel
@@ -157,13 +157,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level2
+LastLevel=/Game/Levels/Level1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1536,6 +1537,43 @@ Level1_C.Input=True
 Level1_C.Actor=True
 TargetWaypoint_C.Tick=True
 TargetWaypoint_C.Replication=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1679,6 +1717,9 @@ TargetWaypoint_C.Replication=True
 /Game/Materials/TargetMaterial.TargetMaterial=1
 /Game/Levels/Level1.Level1:PersistentLevel.Level1=1
 /Game/Blueprints/TargetWaypoint.TargetWaypoint=1
+/Game/Particles/Particle_01.Particle_01=1
+/Game/Particles/Particle_2.Particle_2=1
+/Game/Particles/Particle_3.Particle_3=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1757,8 +1798,12 @@ GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
 Target_C="\"Object.Default.Widgets\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
@@ -1778,7 +1823,6 @@ RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -1796,9 +1840,9 @@ PaperSprite.Collision=True
 LastLogListing=PIE
 
 [RootWindow]
-ScreenPosition=X=805.000 Y=59.000
+ScreenPosition=X=427.000 Y=139.000
 WindowSize=X=850.000 Y=702.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2378,6 +2422,10 @@ TextureEditor.TimeStamp=2017.10.01-15.07.42
 TextureEditor.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2017.09.26-13.41.11
 UATHelper.LastCompileMethod=Unknown
+Cascade.TimeStamp=2017.09.26-13.41.00
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2017.09.26-13.41.02
+DistCurveEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2502,5 +2550,38 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
