Added scoring system and win screen

--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
+GlobalDefaultGameMode=/Game/Blueprints/BounceGamemode.BounceGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -195,5 +195,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
