Improved particle collisions and cleaned up code

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=28)
+NewWindowPosition=(X=685,Y=23)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -164,10 +164,9 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
 OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
-OpenAssetsAtExit=/Game/Blueprints/Widgets/GameOverScreenWidget.GameOverScreenWidget
-OpenAssetsAtExit=/Game/Blueprints/Target.Target
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HUDWidget.HUDWidget
+OpenAssetsAtExit=/Game/Particles/CollisionParticles.CollisionParticles
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1577,6 +1576,38 @@ Emitter.Activation=True
 Emitter.Cooking=True
 Emitter.Emitter=True
 Emitter.Actor=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleAcceleration.Acceleration=True
+ParticleModuleAcceleration.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleCollision.Collision=True
+ParticleModuleCollision.Performance=True
+ParticleModuleCollision.Cascade=True
+ParticleModuleEventGenerator.Events=True
+ParticleModuleEventGenerator.Cascade=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+ParticleModuleKillBox.Kill=True
+ParticleModuleKillBox.Cascade=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1727,10 +1758,10 @@ Emitter.Actor=True
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1745,8 +1776,8 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.\" \"Object.\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
@@ -1801,9 +1832,26 @@ GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
 Target_C=
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
-ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModule="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleAcceleration="\"Object.Acceleration.Acceleration.Distribution\" "
+ParticleModuleAccelerationBase="\"Object.Acceleration.Acceleration.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleCollision="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
+ParticleModuleCollisionBase="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
+ParticleModuleEventGenerator="\"Object.Events.Events\" \"Object.Events.Events.Events[0]\" "
+ParticleModuleEventBase="\"Object.Events.Events\" \"Object.Events.Events.Events[0]\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleKillBox="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
+ParticleModuleKillBase="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
