--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,8 +89,8 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Level1
+MRUItem0=/Game/Levels/Level1
+MRUItem1=/Game/Levels/MainMenu
 MRUItem2=/Game/Levels/Level2
 MRUItem3=/Game/Levels/Level_2
 MRUItem4=/Game/Levels/PrototypeLevel
@@ -160,13 +160,12 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Level1
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
+OpenAssetsAtExit=/Game/Blueprints/Target.Target
 OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
-OpenAssetsAtExit=/Game/Particles/CollisionParticles.CollisionParticles
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1608,6 +1607,10 @@ ParticleSystemComponent.ComponentReplication=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Variable=True
 ParticleSystemComponent.Cooking=True
+MovementWaypoint_C.TransformCommon=True
+MovementWaypoint_C.Rendering=True
+MovementWaypoint_C.Input=True
+MovementWaypoint_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1821,7 +1824,7 @@ MainMenuWidget_C=
 OptionsWidget_C="\"Object.Render Transform.RenderTransform\" "
 LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Render Transform.RenderTransform\" "
-TileBlueprint_C=
+TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
@@ -1852,14 +1855,16 @@ ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Obj
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points.Points[1]\" "
 ParticleModuleKillBox="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
 ParticleModuleKillBase="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
+TileSingle_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
-RecentlyPlaced=/Game/Blueprints/TargetWaypoint.TargetWaypoint;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Target.Target;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
@@ -1871,7 +1876,6 @@ RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnected
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
 RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
 
@@ -2473,10 +2477,10 @@ TextureEditor.TimeStamp=2017.10.01-15.07.42
 TextureEditor.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2017.09.26-13.41.11
 UATHelper.LastCompileMethod=Unknown
-Cascade.TimeStamp=2017.09.26-13.41.00
-Cascade.LastCompileMethod=Unknown
-DistCurveEditor.TimeStamp=2017.09.26-13.41.02
-DistCurveEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2017.10.01-15.07.25
+Cascade.LastCompileMethod=External
+DistCurveEditor.TimeStamp=2017.10.01-15.07.28
+DistCurveEditor.LastCompileMethod=External
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2567,9 +2571,9 @@ SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=
-FloatProperty=
+FloatProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
